<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="title_main">Masukkan Dua Angka</string>
    <string name="masukkan_pertama">Masukkan angka pertama</string>
    <string name="masukkan_kedua">Masukkan angka kedua</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">x</string>
    <string name="divide">/</string>
    <string name="bersihkan">Bersihkan</string>
    <string name="hasil">Hasil</string>
</resources>